

[build-system]

build-backend = "setuptools.build_meta"

requires = [

    "pip == 23.0",
    "wheel == 0.38.4",
    "setuptools == 66.1.1",
    
    "cython == 0.29.33",
    
    "toml == 0.10.2",
]


[build.native-dependencies]

# current version of https://github.com/dxFeed/dxfeed-c-api
dxfeed_c_api = '8.8.0'

# The URL template for zipped dxFeed C API bundle. Parameters used:
#   {version} - The C API version
#   {os}      - The target OS
dxfeed_c_api_bundle_url_template = 'https://github.com/dxFeed/dxfeed-c-api/releases/download/{version}/dxfeed-c-api-{version}-{os}-no-tls.zip'

[project]

name = "dxfeed"
version = "2023.05.101"

requires-python = ">=3.10"

[tool.setuptools]
# use manifest
include-package-data = true

[tool.setuptools.packages.find]
# start at project root
where = [ "" ] 
# ignore non-package folders
namespaces = false
# auto-find packages by regex
include = [ "dxfeed*" ]

[tool.setuptools.cmdclass]
# invoke setuptools build_py class
build_py = "tooler_worker.this_build"
